# harpi

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/grammar/: literal.pest  proto.pest  syntax.pest
core/src/: error.rs  lib.rs  parser.rs
core/src/syntax/: header.rs  mod.rs
core/src/syntax/proto3/: literals.rs  mod.rs  parser.rs  visitor.rs
derive/: Cargo.toml
derive/src/: lib.rs
harpi/: Cargo.toml
harpi/grammar/: proto3.pest  syntax.pest
harpi/src/: error.rs  lib.rs  parser.rs  visitor.rs
harpi/src/model/: model.rs
harpi/src/syntax/: mod.rs
harpi/src/syntax/header/: literals.rs  mod.rs  parser.rs
harpi/src/syntax/proto3/: mod.rs  parser.rs
tests/: Cargo.toml
tests/proto/: test_messages_proto3.proto  unittest_proto3.proto
tests/src/: simple.rs
