[workspace]
members = ["harpi", "derive", "tests"]
resolver = "2"

[workspace.dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
thiserror = "2"
harpi = { path = "./harpi" }
derive = { path = "./derive" }
builder = { git = "https://github.com/NeroWeNeed/builder" } 
getter = { git = "https://github.com/NeroWeNeed/getter" } 
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
